fix: crawler can't crawl plain text

--- a/package.json
+++ b/package.json
@@ -32,18 +32,20 @@
     "class-validator": "^0.13.1",
     "file-type": "^16.5.0",
     "ipfs-http-client": "^44.0.1",
-    "metascraper": "^5.21.5",
-    "metascraper-author": "^5.21.5",
-    "metascraper-clearbit": "^5.21.5",
-    "metascraper-date": "^5.21.5",
-    "metascraper-description": "^5.21.5",
-    "metascraper-image": "^5.21.5",
-    "metascraper-logo": "^5.21.5",
-    "metascraper-publisher": "^5.21.5",
-    "metascraper-title": "^5.21.5",
-    "metascraper-url": "^5.21.5",
-    "metascraper-video": "^5.21.5",
+    "metascraper": "^5.29.3",
+    "metascraper-author": "^5.29.3",
+    "metascraper-clearbit": "^5.29.3",
+    "metascraper-date": "^5.29.3",
+    "metascraper-description": "^5.29.3",
+    "metascraper-image": "^5.29.3",
+    "metascraper-logo": "^5.29.3",
+    "metascraper-publisher": "^5.29.3",
+    "metascraper-title": "^5.29.3",
+    "metascraper-url": "^5.29.3",
+    "metascraper-video": "^5.29.3",
     "passport": "^0.4.1",
+    "puppeteer": "^14.1.0",
+    "puppeteer-core": "^14.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.7",
     "swagger-ui-express": "^4.1.6",
